--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
-<html>
+<html lang="zh_Hant_TW">
 <head>
     <meta charset="utf-8">
     <title>Login</title>
     <link href="/style/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<form action="check.php" method="post">
+<form action="register.php" method="post">
     帳號:&nbsp;
-    <input type="text" name="id" /><br>
+    <input type="text" name="name"/><br>
     密碼:&nbsp;
-    <input type="password" name="pwd" /><br>
-    <input type="submit" value="登入" />
+    <input type="password" name="pwd"/>
+    <p/>
+    <input type="submit" value="註冊"/>
+</form>
+<form action="login.php" method="post">
+    <input type="submit" value="登入"/>
 </form>
 </body>
 </html>
