--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <link href="/style/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<form action="register.php" method="post">
+<form method="post">
     帳號:&nbsp;
     <input type="text" name="name"/><br>
     密碼:&nbsp;
     <input type="password" name="pwd"/>
-    <p/>
-    <input type="submit" value="註冊"/>
-</form>
-<form action="login.php" method="post">
-    <input type="submit" value="登入"/>
+    <p />
+    <button type="submit" formaction='register.php'>註冊</button>
+    <button type="submit" formaction='login.php'>登入</button>
 </form>
 </body>
 </html>
